--- a/map_invitation & wedding.html
+++ b/map_invitation & wedding.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="*Ｊ&Ｙ Wedding invitation">
     <meta property="og:description" content="給每一個曾參與我們人生每一段重要時光的您：)">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="網址">
+    <meta property="og:url" content="https://toxiaomi.github.io/Wedding-invitation/index_invitation%20&%20wedding.html">
     <meta property="og:image" content="https://upload.cc/i1/2019/11/13/D5yoIK.jpg">
     <meta property="og:site_name" content="Ｊ&Ｙ Wedding invitation">
     <!-- 在 HTML 用 og tag 設定 Facebook 預覽畫面 -->
