修改餐廳資訊

--- a/map_invitation & wedding.html
+++ b/map_invitation & wedding.html
@@ -41,7 +41,7 @@
         
 
         <div class="info">
-            <h3>星靚點花園飯店 星語廳(2F)</h3>
+            <h3>星靚點花園飯店</h3>
             <p>時間: 2020 / 04 / 12 星期日 中午12:00 </p>
             <p>地址: 台北市文山區景後街81號</p>
             <p>電話: (02) 2933-8868 </p>
