改電子喜帖連結

--- a/map_invitation & wedding.html
+++ b/map_invitation & wedding.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    https://drive.google.com/open?id=
     <meta charset="UTF-8">
     <title>Ｊ&Ｙ Wedding invitation</title>
     <link rel="icon" href="https://docs.google.com/uc?id=1EEoJVZCSOWIejF6DeOdg2DLPvrZ0mtf6" type="image/x-icon" />
@@ -31,7 +32,7 @@
                 <ul class="menu">
                     <li><a href="index_invitation & wedding.html">出席問卷</a></li>
                     <li><a href="map_invitation & wedding.html">餐廳資訊</a></li>
-                    <li><a href="https://docs.google.com/uc?id=1EZ700J4ODzTYjlQ5hVUC8dzVFuwZAek5&export=download">下載電子喜帖</a></li>
+                    <li><a href="https://docs.google.com/uc?id=1Ox-0ODA5UJI2RSNdM5s77N7-j5G4nuKj=download">下載電子喜帖</a></li>
                 </ul>
             </div>
 
