--- a/index_invitation & wedding.html
+++ b/index_invitation & wedding.html
@@ -31,7 +31,7 @@
                 <ul class="menu">
                     <li><a href="index_invitation & wedding.html">出席問卷</a></li>
                     <li><a href="map_invitation & wedding.html">餐廳資訊</a></li>
-                    <li><a href="https://docs.google.com/uc?id=1Ox-0ODA5UJI2RSNdM5s77N7-j5G4nuKj=download">下載電子喜帖</a></li>
+                    <li><a href="https://docs.google.com/uc?id=1Ox-0ODA5UJI2RSNdM5s77N7-j5G4nuKj&export=download">下載電子喜帖</a></li>
                 </ul>
             </div>
 
